--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ STRIPE_SECRET_KEY=sk_test_51RLobnQjoXH6ue86YODJNZdEfHSjb057DOSGpgVhmypCbGpStXqUp
 
 
 CLIENT_URL=http://localhost:5173
+NODE_ENV=development
