--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "backend/server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm run build --prefix frontend"
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
